# MyFileHelper

./: .gitignore  README.md  README.zh-CN.md  app.py  pyproject.toml  requirements.txt  tmp_upload_test.py
config/: api_config.yaml  logging_config.yaml  security_config.yaml  server_config.yaml  upload_config.yaml
docs/: DOWNLOAD_QUEUE_CONFIG.md  error-codes.md  frontend-maintainability.md
docs/refactoring-history/: BEFORE_AFTER_COMPARISON.md  INDEX.md  REFACTORING.md  VERIFICATION_CHECKLIST.md
modules/: api_utils.py  cleanup.py  config.py  docs_service.py  download_manager.py  error_codes.py  log_routes.py  logging_config.py  message_routes.py  message_service.py  response_utils.py  routes.py  sockets.py  state.py  upload_manager.py  upload_routes.py  upload_service.py  upload_storage.py
quality/: QUALITY_REPORT.md  quality_check.py  requirements-dev.txt
static/: MODULE_DEPENDENCIES.md  QUICK_REFERENCE.md  README.md  app.js  app_init.js  event_handlers.js  file_preview.js  i18n.js  login_manager.js  message_renderer.js  message_view.js  socket_handlers.js  socket_loader.js  socket_pause_manager.js  styles.css  ui_manager.js  upload_flow.js  utils.js
templates/: index.html
tests/: test_app_factory.py  test_config.py  test_download_manager.py  test_error_codes.py  test_frontend_smoke.py  test_message_routes.py  test_message_service.py  test_response_utils.py  test_routes.py  test_sockets.py  test_upload_manager.py  test_upload_routes.py  test_upload_service.py
